{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 70,
  "lineage": "88e4a38f-51b2-6996-5cc8-534acbdd1d35",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06cb2adfb0bd286ce",
            "arn": "arn:aws:ec2:us-east-1:936053805715:elastic-ip/eipalloc-06cb2adfb0bd286ce",
            "association_id": "eipassoc-0d8b0b9a0ec3d43d1",
            "domain": "vpc",
            "id": "eipalloc-06cb2adfb0bd286ce",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d845ec625f3d048d",
            "private_dns": "ip-10-0-0-143.ec2.internal",
            "private_ip": "10.0.0.143",
            "public_dns": "ec2-44-217-87-151.compute-1.amazonaws.com",
            "public_ip": "44.217.87.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:936053805715:instance/i-086970a46666c4075",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086970a46666c4075",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "medifind-dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a8e0b827dfb14d5",
            "private_dns": "ip-10-0-0-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.231",
            "public_dns": "ec2-3-91-14-84.compute-1.amazonaws.com",
            "public_ip": "3.91.14.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d3c9f05bd63dbbab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1a38457e10dbf58",
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-app-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c0bbe59fc663954"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936053805715:internet-gateway/igw-008a4af4eebb08549",
            "id": "igw-008a4af4eebb08549",
            "owner_id": "936053805715",
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-igw"
            },
            "vpc_id": "vpc-06baff112516536f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06cb2adfb0bd286ce",
            "association_id": "eipassoc-0d8b0b9a0ec3d43d1",
            "connectivity_type": "public",
            "id": "nat-0cbb968f082d23102",
            "network_interface_id": "eni-0d845ec625f3d048d",
            "private_ip": "10.0.0.143",
            "public_ip": "44.217.87.151",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b1a38457e10dbf58",
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936053805715:route-table/rtb-074ee6247a8cae135",
            "id": "rtb-074ee6247a8cae135",
            "owner_id": "936053805715",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cbb968f082d23102",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06baff112516536f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936053805715:route-table/rtb-026aaafd8ba525c5b",
            "id": "rtb-026aaafd8ba525c5b",
            "owner_id": "936053805715",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008a4af4eebb08549",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06baff112516536f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b8a6f05ed21f484",
            "route_table_id": "rtb-074ee6247a8cae135",
            "subnet_id": "subnet-0ca086a6eea6db46e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084fe11ca8d547146",
            "route_table_id": "rtb-074ee6247a8cae135",
            "subnet_id": "subnet-08a79ed5431a9fae9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007c3fbfdc38bfeb3",
            "route_table_id": "rtb-026aaafd8ba525c5b",
            "subnet_id": "subnet-0b1a38457e10dbf58"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084f94a27ffc3737a",
            "route_table_id": "rtb-026aaafd8ba525c5b",
            "subnet_id": "subnet-0b3a79c1bc7b190e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936053805715:security-group/sg-0e150021ed374d040",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e150021ed374d040",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "medifind-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "936053805715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06baff112516536f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936053805715:security-group/sg-05c0bbe59fc663954",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c0bbe59fc663954",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend API from anywhere",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere (Frontend)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "medifind-dev-ec2-sg",
            "name_prefix": "",
            "owner_id": "936053805715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-ec2-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06baff112516536f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936053805715:security-group/sg-066c562df318f78f0",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066c562df318f78f0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e150021ed374d040"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "medifind-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "936053805715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-ecs-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06baff112516536f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936053805715:security-group/sg-0b18e2a1322f96a6b",
            "description": "Security group for RDS MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b18e2a1322f96a6b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from ECS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-066c562df318f78f0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "medifind-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "936053805715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06baff112516536f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936053805715:subnet/subnet-0ca086a6eea6db46e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca086a6eea6db46e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936053805715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-private-subnet-1"
            },
            "vpc_id": "vpc-06baff112516536f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936053805715:subnet/subnet-08a79ed5431a9fae9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a79ed5431a9fae9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936053805715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-private-subnet-2"
            },
            "vpc_id": "vpc-06baff112516536f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936053805715:subnet/subnet-0b1a38457e10dbf58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1a38457e10dbf58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "936053805715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-public-subnet-1"
            },
            "vpc_id": "vpc-06baff112516536f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936053805715:subnet/subnet-0b3a79c1bc7b190e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3a79c1bc7b190e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "936053805715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-public-subnet-2"
            },
            "vpc_id": "vpc-06baff112516536f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936053805715:vpc/vpc-06baff112516536f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2137f77ae6f1cff",
            "default_route_table_id": "rtb-0ec9ae26504deaeb6",
            "default_security_group_id": "sg-0beccd5f5fe5461de",
            "dhcp_options_id": "dopt-09d9925f35c917be1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06baff112516536f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec9ae26504deaeb6",
            "owner_id": "936053805715",
            "tags": {
              "Environment": "dev",
              "Name": "medifind-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "medifind-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}